--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ html {
   margin: 0px;
   padding: 0px;
   height: 0;
-  background: #3f3f3f;
+  background-image: url('https://i.imgur.com/GqZocbV.png');
   font-family: 'Roboto', sans-serif;
 }
 
@@ -114,7 +114,7 @@ table {
   margin: auto;
 }
 
-.jumbotron-commands div {
+.jumbotron-commands .text {
   margin-left:11%;
   color: #fff;
 }
