--- a/css/style.css
+++ b/css/style.css
@@ -114,11 +114,11 @@ main {
 
 .main__info-card--title {
     font-weight: bold;
-    font-size: 2.4rem;
+    font-size: 2.2rem;
 }
 
 .main__info-card--body {
-    padding: 0 20px;
+    padding: 10px 20px 0;
     font-weight: 300;
     font-size: 1.2rem;
 }
@@ -130,4 +130,3 @@ main {
     font-size: 2.4rem;
     color: #3C4983;
 }
-
