--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,7 @@ main {
     color: var(--soft-white);
     font-size: 1.4rem;
     font-family: 'Inter', sans-serif;
+    cursor: pointer;
 }
 
 .main__commands-collapse--button::after {
@@ -192,7 +193,12 @@ main {
     font-weight: 900;
 }
 
-.activeIcon::after {
+.activeButton, .main__commands-collapse--button:hover {
+    padding: 19px;
+    border: 1px solid var(--primary-purple);
+}
+
+.activeButton::after {
     content: '\f077';
     font-family: "Font Awesome 5 Free";
     font-weight: 900;
@@ -208,7 +214,7 @@ main {
     display: none;
 }
 
-.active {
+.activeContent {
     display: block;
 }
 
