--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,8 @@
 :root {
   --black: #000;
   --white: #fff;
+  --background: #fff;
+  --max-w-padding: 10px;
 }
 
 * {
@@ -12,8 +14,105 @@
 html {
   font-size: 62.5%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background-color: var(--background);
+}
+
+.cta__button {
+  padding: 12px 20px;
+  font-size: 1.6rem;
+  color: #000;
+  text-decoration: none;
+  background-color: gray;
+  border-radius: 6px;
+  transition: opacity 0.2s ease-in-out;
+}
+
+.cta__button-outlined {
+  padding: 12px 20px;
+  font-size: 1.6rem;
+  color: #000;
+  text-decoration: none;
+  border: 2px solid #000;
+  border-radius: 6px;
+  transition: opacity 0.2s ease-in-out;
+}
+
+.cta__button:hover, .cta__button-outlined {
+  opacity: .6;
 }
 
 header {
+  position: fixed;
+  top: 0;
+  z-index: 1000;
+  height: 60px;
+  width: 100%;
+  box-shadow: inset 0 -2px 0 #00000010;
+  background-color: var(--background);
+}
+
+.header__container {
   display: flex;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 700px;
+  height: 100%;
+  margin: 0 auto;
+  padding: 0 var(--max-w-padding);
+}
+
+.header__nav {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  font-size: 1.6rem;
+  font-weight: 500;
+}
+
+.header__nav a {
+  display: inline-flex;
+  align-items: center;
+  height: 100%;
+  padding: 0 8px;
+  color: #000;
+  text-decoration: none;
+  transition: opacity 0.2s ease;
+}
+
+.header__nav a:hover {
+  opacity: 0.6;
+}
+
+main {
+  margin: 60px auto 0;
+  max-width: 700px;
+}
+
+.hero {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 300px;
+}
+
+.hero__title {
+  margin-bottom: 15px;
+  font-size: 5rem;
+}
+
+.hero__description {
+  max-width: 460px;
+  width: 80%;
+  font-size: 2rem;
+  text-align: center;
+}
+
+.hero__ctas {
+  margin-top: 40px;
+}
+
+.btn__invite {
+  background-color: #5865f2;
+  color: #fff;
 }
