--- a/src/style.css
+++ b/src/style.css
@@ -27,17 +27,7 @@ html {
   transition: opacity 0.2s ease-in-out;
 }
 
-.cta__button-outlined {
-  padding: 12px 20px;
-  font-size: 1.6rem;
-  color: #000;
-  text-decoration: none;
-  border: 2px solid #000;
-  border-radius: 6px;
-  transition: opacity 0.2s ease-in-out;
-}
-
-.cta__button:hover, .cta__button-outlined {
+.cta__button:hover {
   opacity: .6;
 }
 
