--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,7 @@ html {
   font-size: 62.5%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background-color: var(--background);
+  scroll-behavior: smooth;
 }
 
 .cta__button {
@@ -28,7 +29,16 @@ html {
 }
 
 .cta__button:hover {
-  opacity: .6;
+  opacity: 0.6;
+}
+
+section.section {
+  margin-bottom: 60px;
+}
+
+h2.section__title {
+  font-size: 3.5rem;
+  text-align: center;
 }
 
 header {
@@ -84,6 +94,7 @@ main {
   justify-content: center;
   flex-direction: column;
   height: 300px;
+  margin: 40px;
 }
 
 .hero__title {
