--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -4,7 +4,7 @@ header {
   z-index: 1000;
   height: 60px;
   width: 100%;
-  box-shadow: inset 0 -2px 0 #00000010;
+  box-shadow: inset 0 -2px 0px #00000066;
   background-color: var(--bg-light);
   color: var(--font-light);
   transition: background-color .3s;
